--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -1,1 +1,15 @@
-<p>heroe works!</p>
+<h1>{{heroe.nombre}} <small>({{heroe.aparicion}})</small></h1>
+<hr>
+<div class="row">
+    <div class="col-md-4">
+        <img class="img-fluid" [src]="heroe.img" alt="...">
+        <a [routerLink]="['/heroes']" class="btn btn-outline-danger btn-block mt-3">Regresar</a>
+    </div>
+    <div class="col-md-8 mt-5">
+        <h2>{{heroe.nombre}}</h2>
+        <p class="card-text">{{heroe.bio}}.</p>
+        <div class="img-fluid">
+            <img height="120px" src="assets/img/{{heroe.casa | lowercase}}.png" alt="">
+        </div>
+    </div>
+</div>
