--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -2,12 +2,12 @@
 <hr>
 <div class="card-columns">
     <div *ngFor="let heroe of heroes; let i = index" class="card">
-        <img src={{heroe.img}} class="card-img-top" alt="...">
+        <img [src]="heroe.img" class="card-img-top" alt="heroe.img">
         <div class="card-body">
             <h5 class="card-title">{{heroe.nombre}}</h5>
             <p class="card-text">{{heroe.bio}}</p>
             <p class="card-text"><small class="text-muted">{{heroe.aparicion}}</small></p>
-            <button class="btn btn-outline-primary btn-block">Ver mas...</button>
+            <button (click)="verHeroe(heroe.id)" class="btn btn-outline-primary btn-block">Ver mas...</button>
         </div>
     </div>
 </div>
