--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -18,9 +18,9 @@
                 <a [routerLink]="['/about']" routerLinkActive="active" class="nav-link">About</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        <div class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search" (keyup.enter)="buscarHeroe(nombreHeroe.value)" #nombreHeroe>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="button" (click)="buscarHeroe(nombreHeroe.value)">Buscar</button>
+        </div>
     </div>
 </nav>
